--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+input:focus{box-shadow:0 0!important}
 .w-20{width:20%}
 .w-content{width:fit-content}
 .h-500{min-height:500px}
@@ -19,8 +20,9 @@ code {
 .nav-clr a{color:#1e2532}
 .nav-clr a:hover{color:#10529b}
 .nav-link:focus{box-shadow:none}
-.nav-link:hover{box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3)}
-
+.nav-link:not(.text-dark),.hover-shadow{transition: box-shadow 0.3s ease-in-out!important;}
+.nav-link:not(.text-dark):hover{box-shadow: 0 2px 0px 0px rgba(0, 0, 0, 0.2);
+}
 .hover-shadow:hover {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
